As a user I want to see a list of events that I created. [Delivers #183639056]
